# gtaclone

./: .gitignore  CMakeLists.txt  README.md
scripts/: download_assets.sh
src/: main.cpp
src/engine/assets/: AssetManager.cpp  AssetManager.hpp
src/engine/audio/: AudioSystem.cpp  AudioSystem.hpp
src/engine/core/: Engine.cpp  Engine.hpp
src/engine/gameplay/: GameWorld.cpp  GameWorld.hpp
src/engine/input/: InputSystem.cpp  InputSystem.hpp
src/engine/physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/engine/render/: Renderer.cpp  Renderer.hpp
src/engine/world/: WorldStreamer.cpp  WorldStreamer.hpp
